static/styles/style.css
@import "boostrap";
#faintColor{
    background-color: rgba(255, 255, 255, 0.788);
   
}
.stripped{
    margin-top: 0;
    margin-bottom: 0;
    margin-left: 0;
    margin-right:0;
}
#signUpTop{
    padding-top: 0.6in;
}

.aboutMe{
    margin-top: 12%;
    margin-left: 10%;
    margin-right: 10%;
}

.limit{
    max-width: 400px;
    max-height: 380px;
}

.limit2{
    max-width: 800px;
}

.font{
    font-family:  'Montserrat';
}
hr.hr-fade{ 
    border: 0; 
    height: 1px; 
    background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
    background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
    background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
    background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); 
  }


  hr.curl {
    margin-top: 0;
    margin-bottom: 0;
	border-top: 3px double #8c8b8b;
}

.card-limit{
    max-width: 500px;
    max-height: 480px;
    
    margin: 1in auto;
    font-weight: bold;
}
.rel{
    position: relative;
}
.outset{
    border-style: outset;
    border-color: rgb(221, 221, 221);
    border-bottom: hidden;
}
.inset{
    border-style: inset;
    border-color:rgb(221, 221, 221);
    border-top: hidden;
}
.hidden{
    visibility: hidden;
}


.ilb{
    width: fit-content;
    margin: 0 auto;
}

.row {
    display: flex;
    flex-wrap: wrap;
    padding: 0 4px;
  }
  
  /* Create four equal columns that sits next to each other */
  .column {
    flex: 25%;
    max-width: 25%;
    padding: 0 4px;
  }
  
  .np{
      margin: 0;
  }
  .img-center{
    display: block;
    width: 60%;
    margin: auto;
  }
  
  @media (min-width: 34em) {
    .cover{
        object-fit: cover;
        height: 600px;
        object-position: 100% 0;
        
    }  

    .card-columns {
        -webkit-column-count: 1;
        -moz-column-count: 1;
        column-count: 1;
    }

}
@media(max-width: 48em){
    .cover{
        object-fit: cover;
        height: 500px;
        object-position: 100% 0;
        
    }  
    .centered {
        position: absolute;
        top: 50%;
        left: 50%;
        width:50%;
        transform: translate(-50%, -50%);
        color: white;
      }
}

@media (min-width: 48em) {
    .cover{
        object-fit: cover;
        height: 600px;
        
    }  
    .centered {
    position: absolute;
    top: 50%;
    left: 40%;
    width:40%;
    transform: translate(-50%, -50%);
    color: white;
  }
  

    .card-columns {
        -webkit-column-count: 2;
        -moz-column-count: 2;
        column-count: 2;
    }
}

@media (min-width: 62em) {
    .card-columns {
        -webkit-column-count: 2;
        -moz-column-count: 2;
        column-count: 2;
    }
}

@media (min-width: 75em) {
    .cover{
        object-fit: cover;
        height: 600px;
        object-position: 0 40%;
        
    }  
    .card-columns {
        -webkit-column-count: 3;
        -moz-column-count: 3;
        column-count: 3;
    }
}

